<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="SmokeControlParametersBase" Id="{31e8144e-1420-42f1-adcb-fd3ec93a9ef6}">
    <Declaration><![CDATA[TYPE SmokeControlParametersBase :
STRUCT
	NetLink: NetLinkParameters;
	DamperModules: SxDuoParameters;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>